--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,8 +33,11 @@ androidxVectorDrawable = "1.2.0"
 airbnbLottie = "6.1.0"
 googleMaterial = "1.12.0"
 kotlinSerializationJson = "1.6.3"
-openCv = "4.9.0"
 googleDaggerHilt = "2.55"
+
+# Native projects
+openCv = "4.9.0"
+tesseract4Android = "4.8.0"
 
 # PlayStore only
 androidBillingClient = "7.1.1"
